# mcp-fitbit-obsidian

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: auth.py  run_daily.py
src/: auth.py  fitbit_client.py  obsidian.py  server.py
tests/: test_obsidian.py
